// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Pagination snapshots matches snapshot on first page 1`] = `
<DocumentFragment>
  <div
    class="pagination"
  >
    <button
      class="btn"
      disabled=""
    >
      ← Prev
    </button>
    <button
      class="page-btn active"
    >
      1
    </button>
    <button
      class="page-btn "
    >
      2
    </button>
    <button
      class="page-btn "
    >
      3
    </button>
    <button
      class="btn"
    >
      Next →
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination snapshots matches snapshot on middle page 1`] = `
<DocumentFragment>
  <div
    class="pagination"
  >
    <button
      class="btn"
    >
      ← Prev
    </button>
    <button
      class="page-btn "
    >
      1
    </button>
    <button
      class="page-btn active"
    >
      2
    </button>
    <button
      class="page-btn "
    >
      3
    </button>
    <button
      class="page-btn "
    >
      4
    </button>
    <button
      class="page-btn "
    >
      5
    </button>
    <button
      class="btn"
    >
      Next →
    </button>
  </div>
</DocumentFragment>
`;
